sass/_partials/_section-four.scss
.section-fourth {
  @include sectioned-boxes(500px);
  &__inner {
    @include sectioned-boxes-inner(column, $background-color, space-around);
  }
  @media (min-width: 1000px) {
    &__inner {
      @include sectioned-boxes-inner(row, $background-color, space-around);
    }
  }
}

.summary-copyright {
  text-align: center;
  &__title {
    color: $title-text-color;
  }
  &__summary {
    color: $text-grey;
  }
  &__copyright {
    color: $text-grey;
    font-weight: bold;
  }
}

.services {
  &__title {
    color: $text-black;
  }
  &__list {
    color: $text-grey;
  }
}

@media (max-width: 1000px) {
  .services {
    display: none;
  }
}

.continents {
  &__title {
    color: $text-black;
  }
  &__list {
    color: $text-grey;
  }
}

@media (max-width: 1000px) {
  .continents {
    display: none;
  }
}

.contact {
  text-align: center;
  &__address {
    color: $text-grey;
    @media (min-width: 1000px) {
      max-width: 140px;
    }
  }
  &__title {
    color: $text-black;
  }
  & a {
    text-decoration: none;
  }
}

.summary-copyright {
  grid-column: 1 / 3;
  @media (min-width: 1000px) {
    max-width: 280px;
  }
}

